k8s/altair/apps/homelable/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: homelable
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/pouzor/homelable-frontend@sha256:7fc7ab01324fc1596366269fa29460b4261b5dac2b90f6d1040681b5bf5962eb
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 8Mi
            limits:
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: homelable
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
