k8s/altair/apps/homelable/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homelable
  namespace: homelable
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`homelable.greedo.net`)
      services:
        - name: frontend
          port: 80
  tls: {}
